--- a/src/templates/html/home.html
+++ b/src/templates/html/home.html
@@ -8,7 +8,7 @@
     <div class="terminal">
         <div class="command">
             <span class="user__info">{{.user}}@{{.ip}}&nbsp;/&nbsp;$&nbsp;</span>
-            <input type="text" class="command__input">
+            <input type="text" class="command__input" placeholder="Type help for a list of commands...">
         </div>
     </div>
     <script src="templates/js/home.js"></script>
