--- a/src/templates/html/bloglist.html
+++ b/src/templates/html/bloglist.html
@@ -9,7 +9,7 @@
     <input id="create-btn" type="submit" value="Create" onclick="newBlog()">
 </div>
 
-<div id="listbox">
+<div id="listBox">
 <!--    <div class="search-form">-->
 <!--        <input type="text" class="search-input" placeholder="搜索博客">-->
 <!--        <select class="filter-select">-->
